--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Homeless Encampment SRs</title>
+    <title>311 Homeless SRs</title>
     <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/themes/css/cartodb.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href="./css/nv.d3.css" rel="stylesheet" type="text/css">
 
   </head>
@@ -22,7 +23,7 @@
 
     body {
 	  font-weight: bold;
-	  font-family: 'Helvetica';
+	  font-family: 'Lato';
     }
 
     
@@ -44,8 +45,26 @@
       font-weight: bold;
     }        
 	
-
+	.col-md-12 {
+	background-color: #939393;
+	opacity: 0.9;
+	}
 	
+	
+	.alignleft {
+	float: left;
+	color: white;
+	font-size: 20px;
+	padding-left: 50px;
+	padding-top: 10px;
+	}
+	.alignright {
+	float: right;
+	color: white;
+	font-size: 18px;
+	padding-right: 50px;
+	padding-top: 10px;
+	}
 	
 
   </style>
@@ -54,17 +73,18 @@
    <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<h4>
-				NYC 311 Homeless Person Assistance & Homeless Encampment SRs  <small>Jan 1 - Aug 11, 2015</small>
-			</h4>
+			<div id="textbox">
+				<p class="alignleft">NYC 311 Homeless Person Assistance / Encampment SRs</p>
+				<p class="alignright">Jan - Aug 2015</p>
+			</div>
 		</div>
 	</div>
 </div>
     <div id="container">
       <div id="map">
       </div>
-		<div id="chart">
-		<div id = "chartTitle"># Homeless SRs aggregate per day</div>
+	<div id="chart">
+	<div id = "chartTitle"># Homeless SRs aggregate per day</div>
       </div>
     </div>
 
@@ -77,10 +97,10 @@
 
     var map = new L.Map('map', { 
       center: [40.759768,-73.940199],
-      zoom: 11
+      zoom: 12
     });
 
-    L.tileLayer('http://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png', {
+    L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
       attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, &copy; <a href="http://cartodb.com/attributions">CartoDB</a>'
     }).addTo(map);
 
