--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 
   <style>
     html, body, #container {
-      height: 100%;
-      width: 100%;
+      height: 95%;
+      width: 95%;
+	  padding: 1px;
+	  margin: 20px;
+	  margin-bottom: 20px;
+	  margin-left: 30px;
+	  margin-top: 30px;
       overflow: hidden;
     }
 
@@ -46,21 +51,23 @@
     }        
 	
 	.col-md-12 {
-	background-color: #939393;
-	opacity: 0.9;
-	}
+			  background-color: white;
+			  opacity: 0.9;
+			  margin-bottom: -30px;
+			}
 	
+
 	
 	.alignleft {
 	float: left;
-	color: white;
+	color: #4d4d4d;
 	font-size: 20px;
 	padding-left: 50px;
 	padding-top: 4px;
 	}
 	.alignright {
 	float: right;
-	color: white;
+	color: #4d4d4d;
 	font-size: 20px;
 	padding-right: 50px;
 	padding-top: 4px;
@@ -77,14 +84,15 @@
 				<p class="alignleft">NYC 311 Homeless Person Assistance / Encampment SRs</p>
 				<p class="alignright">Jan - Aug 2015</p>
 			</div>
+
 		</div>
 	</div>
 </div>
     <div id="container">
       <div id="map">
       </div>
-	<div id="chart">
-	<div id = "chartTitle"># Homeless SRs aggregate per day</div>
+		<div id="chart">
+		<div id = "chartTitle"># Homeless SRs aggregate per day</div>
       </div>
     </div>
 
