--- a/index.html
+++ b/index.html
@@ -16,13 +16,8 @@
 
   <style>
     html, body, #container {
-      height: 95%;
-      width: 95%;
-	  padding: 1px;
-	  margin: 20px;
-	  margin-bottom: 20px;
-	  margin-left: 30px;
-	  margin-top: 30px;
+      height: 100%;
+      width: 100%;
       overflow: hidden;
     }
 
@@ -51,23 +46,22 @@
     }        
 	
 	.col-md-12 {
-			  background-color: white;
+			  background-color: #939393;
 			  opacity: 0.9;
-			  margin-bottom: -30px;
 			}
 	
 
 	
 	.alignleft {
 	float: left;
-	color: #4d4d4d;
+	color: white;
 	font-size: 20px;
 	padding-left: 50px;
 	padding-top: 4px;
 	}
 	.alignright {
 	float: right;
-	color: #4d4d4d;
+	color: white;
 	font-size: 20px;
 	padding-right: 50px;
 	padding-top: 4px;
